# eshop-django

./: README.md  db.sqlite3  pyproject.toml
eshop/: settings.py  urls.py
store/: admin.py  urls.py
store/migrations/: 0001_initial.py  0002_category.py  0003_product_category.py  0004_customer.py  0005_order.py
store/models/: __init__.py  category.py  customer.py  orders.py  product.py
store/templates/: base.html  cart.html  index.html  login.html  navbar.html  signup.html
store/templates/orders/: order.html
store/templatetags/: cart.py
store/views/: cart.py  checkout.py  home.py  login.py  signup.py
